# vikunja-cli

./: .gitignore  LICENSE  README.md  SKILL.md  go.mod  main.go  pyproject.toml  vikunja.py
.github/workflows/: ci.yml
agents/: openai.yaml
tests/: test_client.py  test_config.py
vikunja/: client.py  config.py
vikunja/commands/: attachments.py  comments.py  config_cmd.py  labels.py  projects.py  relations.py  tasks.py
